One close is enough
Fixes #55

--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -82,7 +82,8 @@
           <div slot="body" id="exportedImageContainer">
             <!-- <img src="[[exportedImg]]" /> -->
           </div>
-          <button slot="reject-trigger">Close</button>
+          <div slot="reject-trigger">&nbsp;</div>
+          <!-- <button slot="reject-trigger">Close</button> -->
           <button slot="accept-trigger">Close</button>
         </px-modal>
       </px-demo-component>
