--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -202,32 +202,32 @@
 
       width: {
         type: Number,
-        inputType: 'number',
-        defaultValue: 500
+        inputType: 'text',
+        defaultValue: '500'
       },
 
       height: {
         type: Number,
-        inputType: 'number',
-        defaultValue: 300
+        inputType: 'text',
+        defaultValue: '300'
       },
 
       scalePadding: {
         type: Number,
-        inputType: 'number',
-        defaultValue: 0.5
+        inputType: 'text',
+        defaultValue: '0.5'
       },
 
       paddingOuter: {
         type: Number,
-        inputType: 'number',
-        defaultValue: 0.5
+        inputType: 'text',
+        defaultValue: '0.5'
       },
 
       hoverOpacity: {
         type: Number,
-        inputType: 'number',
-        defaultValue: 0.3
+        inputType: 'text',
+        defaultValue: '0.3'
       },
 
       orientation: {
