updating generated files

--- a/css/px-vis-boxplot-dark-theme-styles.html
+++ b/css/px-vis-boxplot-dark-theme-styles.html
@@ -1,7 +1,7 @@
 <dom-module id="px-vis-boxplot-dark-theme-styles">
 <template>
 <style>
-html{--px-vis-box-whisker-fill-color:#d9c6f9;--px-vis-box-whisker-stroke-color:#d9c6f9;--px-vis-box-whisker-median-color:#6b4c9b;--px-vis-box-whisker-mean-color:#d9c6f9;--px-vis-box-whisker-mean-fill-color:#121f26;--px-vis-box-whisker-outlier-color:#d9c6f9;--px-vis-box-whisker-outlier-fill-color:transparent;--px-vis-threshold-color:#e28d17;--px-vis-gridlines-color:#2c404c;--px-vis-axis-color:#677e8c;--px-vis-axis-title-color:#b6c3cc}
+html{--px-vis-box-whisker-fill-color:#d9c6f9;--px-vis-box-whisker-stroke-color:#d9c6f9;--px-vis-box-whisker-median-color:#6b4c9b;--px-vis-box-whisker-median-width:2px;--px-vis-box-whisker-mean-color:#d9c6f9;--px-vis-box-whisker-mean-fill-color:#121f26;--px-vis-box-whisker-mean-size:20px;--px-vis-box-whisker-outlier-color:#d9c6f9;--px-vis-box-whisker-outlier-fill-color:transparent;--px-vis-box-whisker-outlier-size:15px;--px-vis-threshold-color:#e28d17;--px-vis-gridlines-color:#2c404c;--px-vis-axis-color:#677e8c;--px-vis-axis-title-color:#b6c3cc}
 </style>
 </template>
 </dom-module>
