update glitch demo link

--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -88,7 +88,7 @@ limitations under the License.
         slot="px-demo-component-snippet"
         element-properties="{{props}}"
         element-name="px-vis-boxplot"
-        codepen-link="https://glitch.com/edit/#!/px-vis-boxplot-demo">
+        codepen-link="https://glitch.com/edit/#!/px-vis-boxplot">
       </px-demo-component-snippet>
     </px-demo-interactive>
 
